--- a/apps/projection/src/app/component/city-card/city-card.component.html
+++ b/apps/projection/src/app/component/city-card/city-card.component.html
@@ -1,22 +1,23 @@
-<div class="border-2 border-black rounded-md p-4 w-fit flex flex-col gap-3 bg-light-blue">
+<app-card
+  class="bg-light-blue"
+  [list]="cities$ | async"
+>
   <img
     alt="city image"
     src="assets/img/city.png"
     width="200px"
   />
-  <app-list-item
-    *ngFor="let item of cities"
-    [name]="item.name"
-  >
-    <button (click)="deleteCity(item.id)" >
-      <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
-    </button>
-  </app-list-item>
-  
-  <button
+  <ng-template #rowRef let-city>
+    <app-list-item [name]="city.name">
+      <button (click)="deleteCity(item.id)" >
+        <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
+      </button>
+    </app-list-item>
+  </ng-template>
+   <button
     class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
     (click)="addNewCity()"
   >
-   Add
+   Add City
   </button>
-</div>
+</app-card>
