--- a/apps/projection/src/app/component/student-card/student-card.component.html
+++ b/apps/projection/src/app/component/student-card/student-card.component.html
@@ -1,22 +1,24 @@
-<div class="border-2 border-black rounded-md p-4 w-fit flex flex-col gap-3 bg-light-green">
+<app-card
+  class="bg-light-green"
+  [list]="students$ | async"
+>
  <img
     alt="student image"
     src="assets/img/student.webp"
     width="200px"
   />
-  <app-list-item
-      *ngFor="let item of students"
-      [name]="item.firstname"
-    >
-    <button (click)="deleteStudent(item.id)">
-        <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
-    </button>
-  </app-list-item>
 
+  <ng-template #rowRef let-student>
+    <app-list-item [name]="student.firstname">
+      <button (click)="deleteStudent(item.id)">
+        <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
+      </button>
+    </app-list-item>
+  </ng-template>
   <button
     class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
     (click)="addNewStudent()"
   >
-    Add
+    Add Student
   </button>
-</div>
+</app-card>
