--- a/apps/projection/src/app/component/teacher-card/teacher-card.component.html
+++ b/apps/projection/src/app/component/teacher-card/teacher-card.component.html
@@ -1,22 +1,23 @@
-<div class="border-2 border-black rounded-md p-4 w-fit flex flex-col gap-3 bg-light-red">
- <img
-    alt="teacher image"
-    src="assets/img/teacher.png"
-    width="200px"
-  />
-  <app-list-item
-      *ngFor="let item of teachers"
-      [name]="item.firstname"
-    >
-    <button (click)="deleteTeacher(item.id)">
-        <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
-    </button>
-  </app-list-item>
-
-  <button
-    class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
-    (click)="addNewTeacher()"
+<app-card
+  [list]="teachers$ | async"
+  class="bg-light-red"
   >
-    Add
+    <img
+      alt="teacher image"
+      src="assets/img/teacher.png"
+      width="200px"
+    />
+    <ng-template #rowRef let-teacher>
+      <app-list-item [name]="teacher.firstname">
+        <button (click)="deleteTeacher(teacher.id)">
+          <img class="h-5" alt="trash image" src="assets/svg/trash.svg" />
+        </button>
+      </app-list-item>
+    </ng-template>
+    <button
+      class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
+      (click)="addNewTeacher()"
+    >
+    Add Teacher
   </button>
-</div>
+</app-card>
